syntax = "proto3";

package user.v2;

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  int32 age = 5;
  string gender = 6;
  string bio = 7;
  repeated string photos = 8;
  repeated string interests = 9;

  message Preferences {
    repeated int32 age_range = 1; // [min, max]
    int32 distance = 2;
    string show_me = 3;
    string looking_for = 4;
  }

  Preferences preferences = 10;

  message Location {
    string type = 1; // Always "Point"
    repeated double coordinates = 2; // [longitude, latitude]
    string display_name = 3;
  }

  Location location = 11;

  bool onboarding_completed = 12;
  string status = 13;
  string created_at = 14;
  string updated_at = 15;
}